--- a/_includes/page/head.html
+++ b/_includes/page/head.html
@@ -4,8 +4,8 @@
   <!-- SEO -->
   {% seo %}
   <!-- CSS -->
-  <link rel="shortcut icon" href="/favicon.ico" />
-  <link rel="stylesheet" href="/assets/styles/normalize.css" />
-  <link rel="stylesheet" href="/assets/styles/sme.css" />
-  <link rel="stylesheet" href="/assets/styles/fonts.css" />
+  <link rel="shortcut icon" href="{{ site.baseurl }}/favicon.ico" />
+  <link rel="stylesheet" href="{{ site.baseurl }}/assets/styles/normalize.css" />
+  <link rel="stylesheet" href="{{ site.baseurl }}/assets/styles/sme.css" />
+  <link rel="stylesheet" href="{{ site.baseurl }}/assets/styles/fonts.css" />
 </head>
