Add hosting and updates

--- a/_includes/page/footer.html
+++ b/_includes/page/footer.html
@@ -1,3 +1,4 @@
 <footer>
-  © 2009-{{ "now" | date: "%Y" }} copyright Sonor Music Editions, P.I. IT12544501005. All rights reserved.
+  <p>© 2009-{{ "now" | date: "%Y" }} copyright Sonor Music Editions, P.I. IT12544501005. All rights reserved.</p>
+  <small>Hosted on <a href="{{ site.github.repository_url }}">GitHub</a> | Updated {{ site.time | date_to_string }} {{ site.time | date: "%H:%M:%S" }}</small>
 </footer>
