Fix main padding bottom

--- a/assets/styles/sme.sass
+++ b/assets/styles/sme.sass
@@ -22,6 +22,7 @@ footer, header, main
   padding: 1em 0
 
 main
+  padding-bottom: 3em
   h1, h2
     color: #FFB241
     font-family: 'Play', 'sans-serif'
