--- a/assets/styles/sme.sass
+++ b/assets/styles/sme.sass
@@ -57,10 +57,12 @@ header
 // GRID
 ol
   list-style: none
+  text-align: left
   margin: 0
   padding: 0
   li
     display: inline-block
+    margin: .2em
     text-align: center
     img
       width: 16em
