--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,9 @@
 {% include page/head.html %}
 <body>
 {% include page/header.html %}
+{% include page/slant.html %}
 {% include page/main.html %}
+{% include page/slant.html %}
 {% include page/footer.html %}
 </body>
 </html>
