Add scripts and active class on navigation

--- a/_includes/page/head.html
+++ b/_includes/page/head.html
@@ -8,4 +8,7 @@
   <link rel="stylesheet" href="{{ site.baseurl }}/assets/styles/normalize.css" />
   <link rel="stylesheet" href="{{ site.baseurl }}/assets/styles/sme.css" />
   <link rel="stylesheet" href="{{ site.baseurl }}/assets/styles/fonts.css" />
+  <!-- JS -->
+  <script src="{{ site.baseurl }}/assets/scripts/jquery.min.js"></script>
+  <script src="{{ site.baseurl }}/assets/scripts/script.js" defer></script>
 </head>
