Add social links

--- a/_includes/page/footer.html
+++ b/_includes/page/footer.html
@@ -1,4 +1,13 @@
 <footer>
   <p>© 2009-{{ "now" | date: "%Y" }} copyright Sonor Music Editions, P.I. IT12544501005. All rights reserved.</p>
+  <p>
+    <!-- BANDCAMP -->
+    <a href="http://sonormusiceditions.bandcamp.com" class="soc"><img src="{{ site.baseurl }}/assets/images/social/bandcamp.png" width="50" height="50" ></a>&nbsp;&nbsp;&nbsp;&nbsp;
+    <!-- EMAIL --><a href="mailto:sonormusiceditions@gmail.com" class="soc"><img src="{{ site.baseurl }}/assets/images/social/mail.png" width="50" height="50" ></a>&nbsp;&nbsp;&nbsp;&nbsp;
+    <!-- FACEBOOK --><a href="https://www.facebook.com/sonormusiceditions" class="soc"><img src="{{ site.baseurl }}/assets/images/social/facebook.png" width="50" height="50"></a>&nbsp;&nbsp;&nbsp;&nbsp;
+    <!-- INSTAGRAM --><a href="https://www.instagram.com/sonormusiceditions" class="soc"><img src="{{ site.baseurl }}/assets/images/social/instagram.png" width="50" height="50"></a>&nbsp;&nbsp;&nbsp;&nbsp;
+    <!-- TWITTER --><a href="https://twitter.com/ArmagideonTimes" class="soc"><img src="{{ site.baseurl }}/assets/images/social/twitter.png" width="50" height="50"></a>&nbsp;&nbsp;&nbsp;&nbsp;
+    <!-- YOUTUBE --><a href="http://www.youtube.com/user/TheArmagideonTimes?feature=watch" class="soc"><img src="{{ site.baseurl }}/assets/images/social/youtube.png" width="50" height="50"></a>&nbsp;&nbsp;&nbsp;&nbsp;
+    <!-- SOUNDCLOUD --><a href="https://soundcloud.com/armagideon-times/sets/sonor-music-editions" class="soc"><img src="{{ site.baseurl }}/assets/images/social/soundcloud.png" width="50" height="50"></a></p>
   <small>Hosted on <a href="{{ site.github.repository_url }}">GitHub</a>  - Updated {{ site.time | date_to_string }} {{ site.time | date: "%H:%M" }}</small>
 </footer>
