--- a/_includes/grid.html
+++ b/_includes/grid.html
@@ -1,19 +1,21 @@
 <ol>
-{% for release in site[page.collection] reversed %}
-{% if release.path != page.path %}
-{% assign release_path = "" | split: "" | push: site.baseurl | push: release.collection | push: release.volume | join: "/" %}
-{% assign cover_path = release_path | append: "/0.jpg" %}
-{% assign cover = release.cover | default: cover_path %}
-  <li>
-    <a href="{{ site.baseurl }}{{ release.url }}">
-      <img src="{{ cover }}" alt="{{ release.title }}">
-      <p class="title">
-        <strong>{{ release.title }}</strong>
-        <br>
-        {{ release.author }} <i>(SME {{ release.volume }})</i>
-      </p>
-    </a>
-  </li>
-{% endif %}
+{%- assign releases = site[page.collection] | sort: "date" -%}
+{% for release in releases reversed %}
+  {% if release.path != page.path %}
+    {%- assign folder = release.path | split: "/" | shift | pop -%}
+    {%- assign release_path = "" | split: "" | push: site.baseurl | push: release.collection | push: folder | join: "/" -%}
+    {% assign cover_path = release_path | append: "/0.jpg" %}
+    {% assign cover = release.image | default: cover_path %}
+    <li>
+      <a href="{{ site.baseurl }}{{ release.url }}">
+        <img src="{{ cover }}" alt="{{ release.title }}">
+        <p class="title">
+          <strong>{{ release.title }}</strong>
+          <br>
+          {{ release.author }}{% if release.volume %} <i>({{ release.volume }}){% endif %}</i>
+        </p>
+      </a>
+    </li>
+  {% endif %}
 {% endfor %}
 </ol>
