Grid title colors

--- a/assets/styles/sme.sass
+++ b/assets/styles/sme.sass
@@ -84,6 +84,9 @@ ol
       overflow: hidden
       text-overflow: ellipsis
       max-width: 18em
+      color: $arancio
+      strong
+        color: $giallo
 
 // SLANT
 .slant
