--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 {% include page/head.html %}
-<body>
+<body data-collection="{{ page.collection}}">
 {% include page/header.html %}
 {% include slant.html %}
 {% include page/main.html %}
