--- a/_includes/gallery.html
+++ b/_includes/gallery.html
@@ -5,6 +5,9 @@
 {% assign page_path = page.path | split: "/" | pop | join: "/" | prepend: "/" | prepend: site.baseurl %}
 {% endif %}
 <div class="gallery {{ include.type }}">
-{% for image in (1..10) %}<img src="{{ page_path }}/{{ forloop.index }}.jpg" onerror="this.onerror=null;this.parentNode.removeChild(this);">
+{% for image in (1..10) %}
+{%- assign image_src = page_path | append: "/" | append: forloop.index | append: ".jpg" -%}
+{%- assign src = page.gallery[forloop.index0] | default: image_src -%}
+<img data-count="{{ forloop.index }}" src="{{ src }}" onerror="this.onerror=null;this.parentNode.removeChild(this);">
 {% endfor %}
 </div>
