--- a/_includes/gallery.html
+++ b/_includes/gallery.html
@@ -5,8 +5,10 @@
 {% assign page_path = page.path | split: "/" | pop | join: "/" | prepend: "/" | prepend: site.baseurl %}
 {% endif %}
 <div class="gallery {{ include.type }}">
-{% for image in (1..10) %}
-{%- assign image_src = page_path | append: "/" | append: forloop.index | append: ".jpg" -%}
+{%- if page.collection == "merchandise" -%}{%- assign init = 0 -%}{%- else -%}{%- assign init = 1 -%}{%- endif -%}
+{%- assign stop = init | plus: 9 -%}
+{% for image in (init..stop) %}
+{%- assign image_src = page_path | append: "/" | append: image | append: ".jpg" -%}
 {%- assign src = page.gallery[forloop.index0] | default: image_src -%}
 <img data-count="{{ forloop.index }}" src="{{ src }}" onerror="this.onerror=null;this.parentNode.removeChild(this);">
 {% endfor %}
