--- a/assets/styles/sme.sass
+++ b/assets/styles/sme.sass
@@ -37,8 +37,14 @@ main
   h2
     margin-top: 0
     color: $arancio
+    &.also
+      margin-top: 2.5em
   a:link, a:visited
     color: $white
+    &.buy
+      color: $giallo
+  > p
+    width: 100%
 
 // LINKS
 a
