--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,6 +2,8 @@
 <html lang="en" dir="ltr">
 {% include page/head.html %}
 <body data-collection="{{ page.collection}}">
+<div id="fb-root"></div>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v7.0"></script>
 {% include page/header.html %}
 {% include slant.html %}
 {% include page/main.html %}
