--- a/_includes/also.html
+++ b/_includes/also.html
@@ -12,7 +12,11 @@
     {% assign cover = release.image | default: cover_path %}
     <li>
       <a href="{{ site.baseurl }}{{ release.url }}">
-        <img src="{{ cover }}" alt="{{ release.title }}">
+        {%- if page.collection == "merchandise" -%}
+          <div class="merch-item" style="background-image:url({{ cover }})"></div>
+        {%- else -%}
+          <img src="{{ cover }}" alt="{{ release.title }}">
+        {%- endif -%}
         <p class="title">
           <strong>{{ release.title }}</strong>
           <br>
