Gif Header logo

--- a/_includes/page/header.html
+++ b/_includes/page/header.html
@@ -1,5 +1,5 @@
 <header>
-  <a href="{{ site.baseurl }}/"><img src="{{ site.baseurl }}/assets/images/logo_SME_header.png" alt="Logo SME"></a>
+  <a href="{{ site.baseurl }}/"><img src="{{ site.baseurl }}/assets/images/logo_SME_header.gif" alt="Logo SME"></a>
 {% capture nav %}{% include page/navigation.md %}{% endcapture %}
 {{ nav | markdownify }}
 </header>
