Add players top margin

--- a/assets/styles/sme.sass
+++ b/assets/styles/sme.sass
@@ -129,7 +129,7 @@ main
     flex: 1 100%
   iframe:not([src*=twitter]):not([src*=facebook])
     flex: initial
-    margin-bottom: 2.5em
+    margin: 2.5em 0
   .gallery.release
     padding-left: 2.5em
     flex: 1
