--- a/assets/styles/sme.sass
+++ b/assets/styles/sme.sass
@@ -132,6 +132,7 @@ main
     margin: 2.5em 0
   .gallery.release
     padding-left: 2.5em
+    margin-top: 2.5em
     flex: 1
     text-align: center
     img
