--- a/assets/styles/sme.sass
+++ b/assets/styles/sme.sass
@@ -143,3 +143,24 @@ main
     .fb-share-button
       top: -4px
       margin-left: .5em
+
+// List table
+table#list
+  img, .merch-item
+    width: 5em
+    height: 5em
+    position: relative
+  .merch-item
+    background-size: cover
+    background-position: top
+  a:link,
+  a:visited
+    color: $giallo
+  a:hover
+    color: $white
+
+// classes
+.arancio
+  color: $arancio
+.giallo
+  color: $giallo
