Shop configuration and includes

--- a/_includes/page/head.html
+++ b/_includes/page/head.html
@@ -8,7 +8,10 @@
   <link rel="stylesheet" href="{{ site.baseurl }}/assets/styles/normalize.css" />
   <link rel="stylesheet" href="{{ site.baseurl }}/assets/styles/sme.css" />
   <link rel="stylesheet" href="{{ site.baseurl }}/assets/styles/fonts.css" />
+  <link rel="stylesheet" href="{{ site.baseurl }}/assets/styles/karrello.css" />
   <!-- JS -->
   <script src="{{ site.baseurl }}/assets/scripts/jquery.min.js"></script>
   <script src="{{ site.baseurl }}/assets/scripts/script.js" defer></script>
+  <script src="{{ site.baseurl }}/assets/scripts/buttons.js"></script>
+  <script src="{{ site.baseurl }}/assets/scripts/karrello.js" defer></script>
 </head>
