--- a/_includes/page/header.html
+++ b/_includes/page/header.html
@@ -1,5 +1,6 @@
 <header>
   <a href="{{ site.baseurl }}/"><img src="{{ site.baseurl }}/assets/images/logo_SME_header.gif" alt="Logo SME"></a>
+  <a href="{{ site.baseurl }}/cart" id="cart-link">CART (<span>0</span>)</a>
 {% capture nav %}{% include page/navigation.md %}{% endcapture %}
 {{ nav | markdownify }}
 </header>
