--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 {% include page/head.html %}
-<body data-collection="{{ page.collection}}">
+<body data-collection="{{ page.collection}}" data-title="{{ page.title | slugify }}">
 <div id="fb-root"></div>
 <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v7.0"></script>
 {% include page/header.html %}
