--- a/_includes/page/main.html
+++ b/_includes/page/main.html
@@ -11,8 +11,17 @@
   <h1>{{ page.title }}</h1>
   <h2>{{ page.author | default: "&nbsp;" }}{% if page.volume %} <i>({{ page.volume }})</i>{% endif %}</h2>
   {%- if page.buy -%}<a class="buy" href="{{ page.buy }}">BUY HERE</a>{%- endif -%}
+  {% comment %} buy box {% endcomment %}
+  {%- if site.data.karrello.collections contains page.collection -%}
+    {%- if page.soldout -%}
+      <p>SOLDOUT</p>
+    {%- else -%}
+      {%- include karrello/buy_box.html -%}
+    {%- endif -%}
+  {%- endif -%}
   {{ content }}
   {% include gallery.html type="release" %}
+  {% comment %} bottom release {% endcomment %}
   {% include share.html %}
   {% include also.html %}
   {% else %}
