--- a/assets/styles/sme.sass
+++ b/assets/styles/sme.sass
@@ -143,6 +143,9 @@ main
     .fb-share-button
       top: -4px
       margin-left: .5em
+  // Remove soundcloud trash div
+  div[style*='word-break: normal;'][style*='text-overflow: ellipsis;'][style*='white-space: nowrap;']
+    display: none
 
 // List table
 table#list
