--- a/assets/styles/sme.sass
+++ b/assets/styles/sme.sass
@@ -133,7 +133,7 @@ main
   .gallery.release
     padding-left: 2.5em
     margin-top: 2.5em
-    flex: 1
+    // flex: 1
     text-align: center
     img
       max-width: 100%
