--- a/assets/styles/sme.sass
+++ b/assets/styles/sme.sass
@@ -133,10 +133,15 @@ main
   .gallery.release
     padding-left: 2.5em
     margin-top: 2.5em
-    // flex: 1
+    flex: 1
     text-align: center
     img
       max-width: 100%
+  .gallery_up .gallery.release
+    flex: none
+    max-width: 50%
+    margin-left: auto
+    margin-right: auto
   .share
     flex: 1 100%
     margin-top: 2rem
@@ -167,3 +172,8 @@ table#list
   color: $arancio
 .giallo
   color: $giallo
+
+// NEW TAPE page
+body[data-title='new-tape'] main p
+  font-size: 90%
+  text-align: justify
