--- a/assets/styles/sme.sass
+++ b/assets/styles/sme.sass
@@ -173,7 +173,8 @@ table#list
 .giallo
   color: $giallo
 
-// NEW TAPE page
-body[data-title='new-tape'] main p
+// NEW TAPE, MARC 4 pages
+body[data-title='new-tape'] main p,
+body[data-title='i-marc-4'] main p
   font-size: 90%
   text-align: justify
