--- a/_includes/page/head.html
+++ b/_includes/page/head.html
@@ -6,7 +6,7 @@
   <!-- CSS -->
   <link rel="shortcut icon" href="{{ site.baseurl }}/favicon.ico" />
   <link rel="stylesheet" href="{{ site.baseurl }}/assets/styles/normalize.css" />
-  <link rel="stylesheet" href="{{ site.baseurl }}/assets/styles/sme.css" />
+  <link rel="stylesheet" href="{{ site.baseurl }}/assets/styles/sme.css?v={{ site.time }}" />
   <link rel="stylesheet" href="{{ site.baseurl }}/assets/styles/fonts.css" />
   <link rel="stylesheet" href="{{ site.baseurl }}/assets/styles/karrello.css" />
   <!-- JS -->
