--- a/assets/styles/sme.sass
+++ b/assets/styles/sme.sass
@@ -174,7 +174,6 @@ table#list
   color: $giallo
 
 // NEW TAPE, MARC 4 pages
-body[data-title='new-tape'] main p,
-body[data-title='i-marc-4'] main p
+body[data-title='new-tape'] main p
   font-size: 90%
   text-align: justify
