Fixes and Marc 4 pictures

--- a/assets/styles/sme.sass
+++ b/assets/styles/sme.sass
@@ -177,3 +177,9 @@ table#list
 body[data-title='new-tape'] main p
   font-size: 90%
   text-align: justify
+
+.full-width
+  max-width: 100%
+
+main > p > img[alt='Marc 4']
+  @extend .full-width
