--- a/_includes/page/head.html
+++ b/_includes/page/head.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="{{ site.baseurl }}/assets/styles/karrello.css" />
   <!-- JS -->
   <script src="{{ site.baseurl }}/assets/scripts/jquery.min.js"></script>
-  <script src="{{ site.baseurl }}/assets/scripts/script.js" defer></script>
+  <script src="{{ site.baseurl }}/assets/scripts/script.js?v={{ site.time }}" defer></script>
   <script src="{{ site.baseurl }}/assets/scripts/buttons.js"></script>
   <script src="{{ site.baseurl }}/assets/scripts/karrello.js" defer></script>
 </head>
