--- a/assets/styles/sme.sass
+++ b/assets/styles/sme.sass
@@ -203,3 +203,16 @@ main > p > img[alt='Marc 4']
 
 [data-title='about-us'] .gallery.page [data-count='1']
   @extend .full-width
+
+//
+// SCROLLBARS
+// --------------------------------------
+*
+  scrollbar-color: $arancio $maron
+  scrollbar-width: auto
+::-webkit-scrollbar-track
+  background: $maron
+::-webkit-scrollbar-thumb
+  background: $arancio
+::-webkit-scrollbar
+  width: auto
