--- a/_includes/page/footer.html
+++ b/_includes/page/footer.html
@@ -6,8 +6,10 @@
     <!-- EMAIL --><a href="mailto:sonormusiceditions@gmail.com" class="soc"><img src="{{ site.baseurl }}/assets/images/social/mail.png" width="50" height="50" ></a>&nbsp;&nbsp;&nbsp;&nbsp;
     <!-- FACEBOOK --><a href="https://www.facebook.com/sonormusiceditions" class="soc"><img src="{{ site.baseurl }}/assets/images/social/facebook.png" width="50" height="50"></a>&nbsp;&nbsp;&nbsp;&nbsp;
     <!-- INSTAGRAM --><a href="https://www.instagram.com/sonormusiceditions" class="soc"><img src="{{ site.baseurl }}/assets/images/social/instagram.png" width="50" height="50"></a>&nbsp;&nbsp;&nbsp;&nbsp;
-    <!-- TWITTER --><a href="https://twitter.com/ArmagideonTimes" class="soc"><img src="{{ site.baseurl }}/assets/images/social/twitter.png" width="50" height="50"></a>&nbsp;&nbsp;&nbsp;&nbsp;
+    <!-- X --><a href="https://x.com/Sonor_Music" class="soc"><img src="{{ site.baseurl }}/assets/images/social/x.png" width="50" height="50"></a>&nbsp;&nbsp;&nbsp;&nbsp;
+    <!-- THREADS --><a href="https://www.threads.net/@sonormusiceditions" class="soc"><img src="{{ site.baseurl }}/assets/images/social/threads.png" width="50" height="50"></a>&nbsp;&nbsp;&nbsp;&nbsp;
+    <!-- LINKTREE --><a href="https://linktr.ee/sonormusiceditions" class="soc"><img src="{{ site.baseurl }}/assets/images/social/linktree.png" width="50" height="50"></a>&nbsp;&nbsp;&nbsp;&nbsp;
     <!-- YOUTUBE --><a href="https://www.youtube.com/playlist?list=PLCmJmMXJXgJ7vw77gxq1bBSbjLdW-c6J9" class="soc"><img src="{{ site.baseurl }}/assets/images/social/youtube.png" width="50" height="50"></a>&nbsp;&nbsp;&nbsp;&nbsp;
-    <!-- SOUNDCLOUD --><a href="https://soundcloud.com/armagideon-times/sets/sonor-music-editions" class="soc"><img src="{{ site.baseurl }}/assets/images/social/soundcloud.png" width="50" height="50"></a></p>
+    <!-- SOUNDCLOUD --><a href="https://soundcloud.com/sonormusiceditions" class="soc"><img src="{{ site.baseurl }}/assets/images/social/soundcloud.png" width="50" height="50"></a></p>
   <small><a href="{{ site.github.repository_url }}">Updated {{ site.time | date_to_string }} {{ site.time | date: "%H:%M" }}</a></small>
 </footer>
